--- a/st/index.html
+++ b/st/index.html
@@ -17,9 +17,12 @@
                 <span class="fs-4">Simple Device Viewer</span>
             </a>
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Devices</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Auth</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Devices</a></li>
             </ul>
             </header>
+        </div>
+        <div class="container">
         </div>
     </main>
 
