--- a/st/index.html
+++ b/st/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <script src="page.js"></script>
+    
     </head>
   <body>
     <main>
@@ -29,8 +29,8 @@
                   <input type="password" class="form-control" id="patToken" aria-describedby="patTokenHelp">
                   <div id="patTokenHelp" class="form-text">Please enter your PAT token</div>
                 </div>
-                <button type="submit" onclick="auth()" class="btn btn-primary">Submit</button>
-              </form>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
         <div id="devices" class="container">
 
@@ -38,5 +38,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-  </body>
+    <script src="page.js"></script>
+    </body>
 </html>
