added room button group

--- a/st/testversion/index.html
+++ b/st/testversion/index.html
@@ -49,7 +49,7 @@
             <div id="deviceInfoModalBody" class="modal-body">
               <div id="json"></div>
             </div>
-            <div id="virtualDeviceForm" class="mb-3">
+            <div id="virtualDeviceForm">
               <label for="roomToAddTo" class="form-label">Room Id</label>
               <input type="text" class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
               <div id="roomToAddTo" class="form-text">Please enter your room id</div>
