added room button group

--- a/st/testversion/index.html
+++ b/st/testversion/index.html
@@ -48,17 +48,17 @@
             </div>
             <div id="deviceInfoModalBody" class="modal-body">
               <div id="json"></div>
-            </div>
-            <div id="virtualDeviceForm">
-              <label for="roomToAddTo" class="form-label">Room Id</label>
-              <input type="text" class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
-              <div id="roomToAddTo" class="form-text">Please enter your room id</div>
-              <label for="newDeviceName" class="form-label">Device Name</label>
-              <input type="text" class="form-control" id="newDeviceName" aria-describedby="newDeviceNameDesc">
-              <div id="newDeviceNameDesc" class="form-text">Please enter your a name for your new device</div>
-              <label for="newDeviceType" class="form-label">Device Type</label>
-              <input type="text" class="form-control" id="newDeviceType" aria-describedby="newDeviceTypeDesc">
-              <div id="newDeviceTypeDesc" class="form-text">Please choose a device type</div>
+              <div class="d-none" id="virtualDeviceForm">
+                <label for="roomToAddTo" class="form-label">Room Id</label>
+                <input type="text" class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
+                <div id="roomToAddTo" class="form-text">Please enter your room id</div>
+                <label for="newDeviceName" class="form-label">Device Name</label>
+                <input type="text" class="form-control" id="newDeviceName" aria-describedby="newDeviceNameDesc">
+                <div id="newDeviceNameDesc" class="form-text">Please enter your a name for your new device</div>
+                <label for="newDeviceType" class="form-label">Device Type</label>
+                <input type="text" class="form-control" id="newDeviceType" aria-describedby="newDeviceTypeDesc">
+                <div id="newDeviceTypeDesc" class="form-text">Please choose a device type</div>
+              </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
