added room button group

--- a/st/testversion/index.html
+++ b/st/testversion/index.html
@@ -48,7 +48,7 @@
             </div>
             <div id="deviceInfoModalBody" class="modal-body">
               <div id="json"></div>
-              <div class="d-none" id="virtualDeviceForm">
+              <div style="display:none" id="virtualDeviceForm">
                 <label for="roomToAddTo" class="form-label">Room Id</label>
                 <input type="text" class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
                 <div id="roomToAddTo" class="form-text">Please enter your room id</div>
