added room button group

--- a/st/testversion/index.html
+++ b/st/testversion/index.html
@@ -58,6 +58,7 @@
                 <label for="newDeviceType" class="form-label">Device Type</label>
                 <input type="text" class="form-control" id="newDeviceType" aria-describedby="newDeviceTypeDesc">
                 <div id="newDeviceTypeDesc" class="form-text">Please choose a device type</div>
+                <button type="button" id="addDeviceButton" class="btn btn-primary">Add</button>
               </div>
             </div>
             <div class="modal-footer">
