added room button group

--- a/st/testversion/index.html
+++ b/st/testversion/index.html
@@ -50,7 +50,7 @@
               <div id="json"></div>
               <div style="display:none" id="virtualDeviceForm">
                 <label for="roomToAddTo" class="form-label">Room Id</label>
-                <input type="text" class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
+                <input type="text" disabled class="form-control" id="roomToAddTo" aria-describedby="roomToAddTo">
                 <div id="roomToAddTo" class="form-text">Please enter your room id</div>
                 <label for="newDeviceName" class="form-label">Device Name</label>
                 <input type="text" class="form-control" id="newDeviceName" aria-describedby="newDeviceNameDesc">
